--- a/paper-calendar.html
+++ b/paper-calendar.html
@@ -170,70 +170,61 @@
           }
           return years;
         },
-        /* TODO: figure out a user-friendly way to auto-populate years
-         * It takes more time on mobile, so there should be some indication that a
-         * year is loading. One idea is to make it so that when the user scrolls to
-         * the bottom, an indicator appears showing that the content for that year is
-         * loading. We'd need extra logic to handle scrolling and removal of years
-         * that are hidden from view.
-        loadMoreUpper: function() {
-        },
-        loadMoreLower: function() {
-        }
-        */
-        populate: function(year, minDate, maxDate) {
+        populate: function(years, minDate, maxDate) {
           var months = [];
           var month, weeks, day, d, dayInfo, monthData, date = new Date();
 
-          date.setYear(year);
-          date.setHours(0, 0, 0, 0);
+          for (var year in years) {
+            date.setYear(year);
+            date.setHours(0, 0, 0, 0);
 
-          var startMonth = 0;
-          var endMonth = 12;
-          if (minDate && year === minDate.getFullYear()) {
-            startMonth = minDate.getMonth();
-          }
-          if (maxDate && year === maxDate.getFullYear()) {
-            endMonth = maxDate.getMonth() + 1;
-          }
-
-          for (month=startMonth; month<endMonth; month++) {
-            weeks = [[]];
-            day = 1;
-            date.setMonth(month);
-            date.setDate(1);
-
-            // add "padding" days
-            for (d=0; d<date.getDay(); d++) {
-              weeks[0].push({day: null});
+            var startMonth = 0;
+            var endMonth = 12;
+            if (minDate && year === minDate.getFullYear()) {
+              startMonth = minDate.getMonth();
+            }
+            if (maxDate && year === maxDate.getFullYear()) {
+              endMonth = maxDate.getMonth() + 1;
             }
 
-            // add actual days
-            while (date.getMonth() === month) {
-              if (d % 7 === 0) {
-                // start new week
-                weeks.push([]);
+            for (month=startMonth; month<endMonth; month++) {
+              weeks = [[]];
+              day = 1;
+              date.setMonth(month);
+              date.setDate(1);
+
+              // add "padding" days
+              for (d=0; d<date.getDay(); d++) {
+                weeks[0].push({day: null});
               }
-              dayInfo = {
-                date: new Date(year, month, day),
-                name: this.isoFormat(year, month, day),
+
+              // add actual days
+              while (date.getMonth() === month) {
+                if (d % 7 === 0) {
+                  // start new week
+                  weeks.push([]);
+                }
+                dayInfo = {
+                  date: new Date(year, month, day),
+                  name: this.isoFormat(year, month, day),
+                  year: year,
+                  month: month,
+                  day: day,
+                };
+                weeks[weeks.length-1].push(dayInfo);
+                date.setDate(++day);
+                d++;
+              }
+              monthData = {
                 year: year,
                 month: month,
-                day: day,
+                weeks: weeks,
+                domReady: false
               };
-              weeks[weeks.length-1].push(dayInfo);
-              date.setDate(++day);
-              d++;
+              months.push(monthData);
             }
-            monthData = {
-              year: year,
-              month: month,
-              weeks: weeks,
-              domReady: false
-            };
-            months.push(monthData);
+            this.set('_months', months);
           }
-          this.set('_months', months);
         },
         isoFormat: function(year, month, day) {
           var date;
@@ -244,8 +235,8 @@
             day = date.getDate();
           }
           return (
-            year + '-' + 
-            ('0' + month).slice(-2) + '-' + 
+            year + '-' +
+            ('0' + month).slice(-2) + '-' +
             ('0' + day).slice(-2)
           );
         },
@@ -313,7 +304,7 @@
         },
         _isDateInBounds: function(date) {
           return !date || (
-            (!this.minDate || this.minDate.getTime() <= date.getTime()) && 
+            (!this.minDate || this.minDate.getTime() <= date.getTime()) &&
             (!this.maxDate || this.maxDate.getTime() >= date.getTime())
           );
         },
