use years in call to populate

--- a/paper-calendar.html
+++ b/paper-calendar.html
@@ -126,7 +126,7 @@
           Polymer.IronResizableBehavior
         ],
         observers: [
-          'populate(_year, minDate, maxDate)'
+          'populate(years, minDate, maxDate)'
         ],
         listeners: {
           'iron-resize': '_resizeHandler'
