check falsiness of this.date before grabbing localeDateString

--- a/paper-calendar.html
+++ b/paper-calendar.html
@@ -237,7 +237,7 @@
           );
         },
         getDayClass: function(cssClass, date) {
-          if (date && (this.date.toLocaleDateString() === date.toLocaleDateString())) {
+          if (date && this.date && (this.date.toLocaleDateString() === date.toLocaleDateString())) {
             cssClass += ' selected';
           }
           return cssClass;
